devops/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: {K8S_DEPLOYMENT}-svctriala
  labels:
    app: {K8S_DEPLOYMENT}
spec:
  selector:
    app: {K8S_DEPLOYMENT}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
